# map-coloring

./: Cargo.toml
maps/: 1.toml  canda.toml  usa.toml
src/: app.rs  cell.rs  main.rs
src/scene/: create_links.rs  enter_names.rs  generate_map.rs  mod.rs  start.rs
src/utility/: file.rs
